<resources>
    <string name="app_name">DevFest SPb 2019</string>
    <string-array name="array02">
        <item>11 : 15</item>
        <item>Multiplayer games with WebXR</item>
        <item>Room 2</item>
        <item>Tanay Pant</item>
        <item>Engineering Communications Manager at Research Gate Berlin, Germany</item>
        <item>Virtual Reality is a technology used for building realistic experiences for games, environments,
            content display as well as marketing. In this session, I will teach the participants about 3D objects
            in the web, virtual reality, VR devices, WebVR, WebVR API and finally building games with A-Frame.
            In this talk, I will also showcase creating a multiplayer game similar to Pokemon Go using WebXR in a
            live coding session. The live coding session will cover topics such as creating the game scene, importing
            3D objects, interaction with objects, adding animations, implementing WebAR and adding multiplayer
            capability to the game with real time databases. By the end of the session, the participants will have
            a complete understanding of what WebXR is and they will be able to create cross-browser WebXR experiences
            as well as multiplayer games similar to Pokemon Go.
        </item>
        <item>Tanay Pant is an author, hacker, developer and tech enthusiast. He is best known for his work on
            “Learning Web-based Virtual Reality” by Apress, “Building a Virtual Assistant for Raspberry Pi” by
            Apress and “Learning Firefox OS Application Development” published by Packt. He is also an official
            representative of Mozilla. He has been listed in the about:credits of the Firefox web browser for his
            contributions to the different open source projects of the Mozilla Foundation. He also writes for a
            number of websites like SitePoint and Tuts+ where he shares tips and tricks about web development.
        </item>
        <item></item>
        <item>https://www.amazon.com/Tanay-Pant/e/B015R1B9RE</item>
        <item>https://twitter.com/tanay1337</item>
    </string-array>
    <string name="description">Рекламируя вашему другу Kotlin, как замену Java, наверняка первым аргументом будет тот
        самый синтаксический сахар, от которого мы получаем профит каждый день: поддержка nullability из коробки,
        аргументы по умолчанию, свойства-делегаты, data и sealed классы и т.д. Но если нам понадобится прикрутить к
        проекту процессор аннотаций, то, к сожалению, вся информация, которую получится собрать о нашем коде, будет
        Java-специфична, а Kotlin-фичи останутся незамеченными. В этом докладе мы выясним, как использовать метаданные,
        добавляемые Kotlin-компилятором к коду, чтобы получить информацию об использованных особенностях языка, и как
        использовать её во время обработки аннотаций.
    </string>
    <string name="position_speaker">Mobile Consultant Digital Nomad, Russia</string>
    <string name="speaker">Sergey Ryabov</string>
    <string name="room">Room 1</string>
    <string name="buttonText">Все доклады</string>
    <string name="theme">Kotlin-friendly Annotation Processing</string>
    <string name="time">11 : 15</string>
    <string name="info_about_speaker">
        <![CDATA[Currently Sergey is an independent Android Engineer and Consultant with the background in backend dev. Co-organiser of the first Kotlin User Group in Russia and Android Academy in St. Petersburg and Moscow, usually speaks about Kotlin & Android. Kotlin early adopter, digital nomad.]]></string>
    <string name="telegram_ryabov">https://t.me/colriot</string>
    <string name="twitter_ryabov">https://twitter.com/colriot</string>
</resources>