<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/llMainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSilver">

    <include
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/tvTime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_20"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginTop="@dimen/indent_vertical"
            tools:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
    />

    <TextView
            android:id="@+id/tvTheme"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/headerSize"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvTime"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginTop="@dimen/indent_vertical"
            tools:text="@string/theme"
    />

    <TextView
            android:id="@+id/tvRoom"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_15"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvTheme"
            android:layout_marginStart="@dimen/indent"
            tools:text="@string/room"
    />

    <ImageView
            android:id="@+id/ivContent"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:tint="@android:color/holo_green_dark"
            tools:src="@drawable/ic_cellphone_ui"
            app:layout_constraintStart_toEndOf="@+id/tvTime"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/indent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/tvTime"
            app:layout_constraintBottom_toBottomOf="@+id/tvTime"
    />

    <ImageView
            android:id="@+id/ivLanguage"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/indent"
            tools:src="@drawable/ic_rus"
            android:layout_marginTop="@dimen/indent_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tvRoom"
    />

    <TextView
            android:id="@+id/tvSpeaker"
            android:layout_height="27dp"
            android:layout_width="wrap_content"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/ivLanguage"
            android:layout_marginStart="@dimen/indent"
            tools:text="@string/speaker"
            app:layout_constraintTop_toTopOf="@+id/ivLanguage"
    />

    <TextView
            android:id="@+id/tvPosition"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size_15"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvSpeaker"
            app:layout_constraintStart_toEndOf="@+id/ivLanguage"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginEnd="@dimen/indent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/position_speaker"
            app:layout_constraintHorizontal_bias="0.0"
    />

    <View
            android:id="@+id/vDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvPosition"
            android:layout_marginTop="@dimen/indent_vertical"
    />

    <TextView
            android:id="@+id/tvDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_15"
            android:textColor="@android:color/black"
            android:maxLines = "12"
            android:scrollbars = "vertical"
            android:paddingStart="@dimen/indent"
            android:paddingEnd="@dimen/indent"
            android:layout_marginTop="@dimen/indent_vertical"
            android:layout_marginBottom="@dimen/indent_vertical"
            app:layout_constraintTop_toTopOf="@+id/vDescription"
            android:scaleType="center"
            tools:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/bButton"
    />

    <Button
            android:id="@+id/bButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/buttonText"
            android:textSize="@dimen/text_size_15"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/indent"
            android:layout_marginBottom="@dimen/indent"
            tools:text="@string/buttonText"
    />

</android.support.constraint.ConstraintLayout>

